[package]
name = "wif"
version = "0.1.0"
authors = ["Pat Nakajima <patnakajima@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[features]
esp32c6 = [
  "esp-hal/esp32c6",
  "esp-backtrace/esp32c6",
  "esp-println/esp32c6",
  "esp-wifi/esp32c6",
  "esp-storage/esp32c6",
]

[[bin]]
name = "wif"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
esp32c6 = { version = "0.16.0", features = ["critical-section", "rt"] }
ieee80211 = "0.5.0"
esp-wifi = { git = "https://github.com/esp-rs/esp-hal.git", features = [
  "esp32c6",
  "utils",
  "wifi",
  "wifi-default",
  "sniffer",
] }
critical-section = "1.1.3"
esp-println = { version = "0.11.0", features = ["esp32c6", "log"] }
esp-backtrace = { version = "0.14.1", features = [
  "exception-handler",
  "panic-handler",
  "println",
  "esp32c6",
] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", default-features = false, features = [
  "esp32c6",
] }
esp-storage = { git = "https://github.com/esp-rs/esp-hal.git", features = [
  "esp32c6",
] }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git" }
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
  "medium-ethernet",
  "proto-dhcpv4",
  "proto-igmp",
  "proto-ipv4",
  "socket-dhcpv4",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal.git", features = [
  "esp32c6",
  "integrated-timers",
] }
fugit = "0.3.7"
embassy-executor = { version = "0.6.0", features = ["executor-thread"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
embassy-time = "0.3.2"
embassy-futures = "0.1.1"
embassy-sync = "0.6.0"

[build-dependencies]
embuild = "0.32.0"
